turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
		rule(state,i) match {
                    ^